cambios en models, repository and security

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,4 +12,8 @@ spring.jpa.show-sql=true
 
 # Configuración del puerto del backend
 server.port=8080
-
+#Configuracion de seguridad para usuarios
+spring.security.user.name=Jhonny
+spring.security.user.password=Lilpee
+spring.security.user.roles=USER  
+# Los roles del usuario (puedes agregar más roles si lo deseas)
